--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         </section>
     </section>
     <footer>
-        <section class="container ggggggg">
+        <section class="container BBBB">
             <p>Lorem ipsum is simply dummy text of the printing and<a class="color-href" href=""> typesetting industry</a></p>
         </section>
     </footer>
